# AskHR

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  launch.command  pyproject.toml  requirements.txt  run.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: config.py  embeddings.py  error_utils.py  ingest_manifest.py  llm.py  logging_setup.py  logging_utils.py  main.py  middleware.py  paths.py  prompting.py  prompting_grounded.py  retriever.py  schemas.py  store.py
ask_hr_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/clean/: 13__chunk0000.md  13__chunk0001.md  13__chunk0002.md  13__chunk0003.md  13__chunk0004.md  13__chunk0005.md  13__chunk0006.md  13__chunk0007.md  13__chunk0008.md  13__chunk0009.md  13__chunk0010.md  13__chunk0011.md  (+63027 more)
docs/: AskHR-SoT.txt  OVERVIEW.md
eval/: README.md  __init__.py  cases.csv  cases.sample.csv  run_eval.py  schema.py  utils.py
index/: chroma.sqlite3
patches/: convo_memory.patch
scripts/: __init__.py  _curl_examples.sh  ensure_models.sh  index_build.py  index_manifest.py  index_reset.py  ingest_incremental.py  ingest_md.py  ingest_pdf.py  ingest_run.py  ingest_shared.py  name_source.py  refresh_all.sh  run_api.sh  run_ui.sh  search_scenarios.py  seed_sample_pack.py  stop.sh  test_embedding.py  wait_for_api.sh
tests/: test_api_smoke.py  test_eval_csv.py  test_eval_imports.py  test_eval_runner.py  test_eval_utils.py  test_packaging.py  test_paths_and_file_endpoint.py  test_prompting.py  test_prompting_grounded.py  test_schemas.py
ui/: app.py  kit.py
(+14 files in other folders)
